remove x-overflow on outfits-not-logged-in message on smaller viewports

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -532,6 +532,7 @@ body.outfits-edit
     
     #preview-outfits-not-logged-in
       text-align: center
+      overflow-x: hidden
       
       img
         border:
