add bottom padding to sidebar content for a cleaner scroll

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -710,6 +710,7 @@ body.outfits-edit
     border: 1px solid $soft-border-color
     border-top: 0
     overflow: auto
+    padding-bottom: 1.5em
 
   #save-success, #save-error, #outfit-not-found, #preview-sidebar-donation-request
     +sidebar-view-child
