set sidebar height properly on non-fullscreen mode

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -709,6 +709,7 @@ body.outfits-edit
     +border-radius(0 0 $sidebar-border-radius $sidebar-border-radius)
     border: 1px solid $soft-border-color
     border-top: 0
+    height: 300px
     overflow: auto
     padding-bottom: 1.5em
 
