move padding on sidebar-content to sidebar-view for consistent behavior on fullscreen mode

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -207,7 +207,7 @@ body.outfits-edit
       #preview-sharing
         display: block
     .sidebar-view
-      margin-top: 1.5em
+      margin: 1.5em 0
   #preview-closet
     h2
       margin-bottom: 0
@@ -711,7 +711,6 @@ body.outfits-edit
     border-top: 0
     height: 300px
     overflow: auto
-    padding-bottom: 1.5em
 
   #save-success, #save-error, #outfit-not-found, #preview-sidebar-donation-request
     +sidebar-view-child
